--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
 # https://platform.openai.com/api-keys
 OPENAI_API_KEY=
 SERVER_URL=http://localhost:3000/
+# https://platform.openai.com/playground
+ASSISTANT_ID=
